# PyAlgo-1

./: .travis.yml  LICENSE  Procfile  README.md  api.cmd  pyproject.toml  requirements.txt  test.cmd
.github/workflows/: codeql-analysis.yml
API/: api.py  info.json
docs/: conf.py  index.rst
docs/Functions/: index.rst  pyalgo.math.rst
pyalgo/: __init__.py
pyalgo/math/: euler.py  factorial.py  gray_code.py  power.py  sieve.py
test/API/: test_api.py
test/math/: test_euler.py  test_factorial.py  test_gray_code.py  test_power.py  test_sieve.py
